Make sure nav column doesn't wrap

--- a/web/skins/classic/css/base/views/monitor.css
+++ b/web/skins/classic/css/base/views/monitor.css
@@ -75,9 +75,10 @@ body.sticky #content {
   overflow-y: auto;
   height: 100%;
 }
-nav ul {
+nav ul.nav {
   height: 100%;
-    flex-direction: column;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 
 ul.form > li {
